--- a/master/client/src/assets/styles.css
+++ b/master/client/src/assets/styles.css
@@ -4,3 +4,13 @@ body {
   margin-left: 5px;
   margin-right: 5px;
 }
+
+.v-enter-active,
+.v-leave-active {
+  transition: opacity 0.1s ease-in-out;
+}
+
+.v-enter-from,
+.v-leave-to {
+  opacity: 0;
+}
