--- a/master/client/src/assets/styles.css
+++ b/master/client/src/assets/styles.css
@@ -5,6 +5,10 @@ body {
   margin-right: 5px;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
 .v-enter-active,
 .v-leave-active {
   transition: opacity 0.1s ease-in-out;
